Closed Bug 1617301 Opened 4 years ago Closed 4 years ago

VoiceOver does not follow keyboard focus

Categories

(Core :: Disability Access APIs, defect, P2)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla75
Tracking Status
firefox75 --- verified
firefox76 --- verified

People

(Reporter: eeejay, Assigned: eeejay)

References

(Blocks 1 open bug)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

STR:

  1. Launch Chrome and open wikipedia
  2. Launch VoiceOver
  3. Move focus through links with tab

Results:
VoiceOver cursor follows keyboard focus

  1. Launch Firefox and open wikipedia
  2. Launch VoiceOver
  3. Move focus through links with tab

Expected:
Same as Chrome

Actual:
VO cursor does not move with focus

See Also: → 1616682

This is similar to the fix in bug 1614079 where we need to account
for a descendant that might match past a process boundary.

Assignee: nobody → eitan
Status: NEW → ASSIGNED
Blocks: 1616662
See Also: 1616662
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/14a1863166fc
Fix accessibilityFocusedUIElement to work across processes. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Flags: qe-verify+

I managed to reproduce the issue using an older version of Nightly on macOS 10.15.
I verified the fix using the same OS on latest Nightly 76.0a1 and beta 75.0b3. The issue is not reproducing anymore.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
See Also: → 1380027
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: