Bug 1617301 - Fix accessibilityFocusedUIElement to work across processes. r=morgan

This is similar to the fix in bug 1614079 where we need to account
for a descendant that might match past a process boundary.

Differential Revision: https://phabricator.services.mozilla.com/D63974