accessible/mac/mozAccessible.mm
@@ -18,6 +18,7 @@
 #include "TableAccessible.h"
 #include "TableCellAccessible.h"
 #include "mozilla/a11y/PDocAccessible.h"
+#include "mozilla/dom/BrowserParent.h"
 #include "OuterDocAccessible.h"
 
 #include "nsRect.h"
@@ -544,7 +545,18 @@ static inline NSMutableArray* ConvertToNSArray(nsTArray<ProxyAccessible*>& aArra
   mozAccessible* focusedChild = nil;
   if (accWrap) {
     Accessible* focusedGeckoChild = accWrap->FocusedChild();
-    if (focusedGeckoChild) focusedChild = GetNativeFromGeckoAccessible(focusedGeckoChild);
+    if (focusedGeckoChild) {
+      focusedChild = GetNativeFromGeckoAccessible(focusedGeckoChild);
+    } else {
+      dom::BrowserParent* browser = dom::BrowserParent::GetFocused();
+      if (browser) {
+        a11y::DocAccessibleParent* proxyDoc = browser->GetTopLevelDocAccessible();
+        if (proxyDoc) {
+          mozAccessible* nativeRemoteChild = GetNativeFromProxy(proxyDoc);
+          return [nativeRemoteChild accessibilityFocusedUIElement];
+        }
+      }
+    }
   } else if (proxy) {
     ProxyAccessible* focusedGeckoChild = proxy->FocusedChild();
     if (focusedGeckoChild) focusedChild = GetNativeFromProxy(focusedGeckoChild);
